2006-01-19  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.h (struct _GstMPEGParse): 
	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_reset) 
	(gst_mpeg_parse_process_event, gst_mpeg_parse_parse_packhead) 
	(gst_mpeg_parse_change_state): 
	Make timestamp adjustment somewhat milder. Actual timestamps are
	now sent unmodified unless an actual gap is found in the
	stream. This should fix time display when playing most MPEG
	files.

2006-01-18  Edward Hervey  <edward@fluendo.com>

	* gst/mpegstream/gstmpegdemux.c: (gst_mpeg_demux_send_subbuffer): 
	tss tss... always set caps on outgoing buffer.

2006-01-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.10.1 ===

2006-01-13  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.1, "Peng"

2006-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  prerelease

2006-01-10  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/amrnb/amrnbparse.c: (gst_amrnbparse_query):
	* ext/mad/gstid3tag.c: (gst_id3_tag_src_query):
	* ext/mad/gstmad.c: (gst_mad_src_query):
	* ext/mpeg2dec/gstmpeg2dec.c: (gst_mpeg2dec_src_query):
	* ext/sidplay/gstsiddec.cc:
	* gst/mpegstream/gstmpegparse.c: (gst_mpeg_parse_handle_src_query):
	* gst/realmedia/rmdemux.c: (gst_rmdemux_src_query):
	  Pass unhandled queries upstream (useful e.g. for SEEKING query)
	  (fixes #325652; based on patch by: Philippe); make rmdemux return
	  FALSE for position queries, instead of setting -1 as value and
	  returning TRUE.

2006-01-05  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_adjust_ts) 
	(gst_mpeg_parse_process_event, gst_mpeg_parse_pad_added): Don't
	rewrite timestamps in the case segments are being set from
	upstream, but use timestamps unmodified. Also send proper position
	values. This allows for correct time display and makes queries